--- a/HamOrSpam/HamOrSpam/HamOrSpam.fsproj
+++ b/HamOrSpam/HamOrSpam/HamOrSpam.fsproj
@@ -55,10 +55,12 @@
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
+    <Compile Include="NaiveBayes.fs" />
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
+    <None Include="Script.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
